2021-08-28  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* styfile.c:
	Add a alias "headings_flag" of the keyword "heading_flag"
	in style file for compatibility with makeindex.
	Warn if specifier in style file is unknown.

2021-08-26  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* sort.c:
	Initialize a variable.
	* tests/upmendex.test, tests/locale1.{ist,ind}:
	Add a new test for "icu_locale".

2021-08-25  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* sort.c:
	Initialize a string. Check malformed input for "icu_rules".
	* tests/upmendex.test, tests/rule[34].ist:
	Add new tests.

2021-08-23  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/upmendex.test, tests/rule[12].ist, tests/rule.{idx,ind}:
	Add new tests for the keyword "icu_rules" in style file.

2021-08-08  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 0.58  Beta version.
	* configure.ac: Bump version.
	* main.c, convert.c, fwrite.c, sort.c, styfile.c, mendex.h, {,ex}kana.h, {,ex}var.h:
	Supports Devanagari, Thai scripts (experimental).
	Add keywords "devanagari_head", "thai_head" to style file.
	Add a keyword "hangul_head" to style file, let "tumumja" deprecated.
	* styfile.c:
	Add an option "numeric-ordering" to the keyword "icu_attributes" in style file.
	* upmendex.ja.txt:
	Update document.

2021-06-19  Karl Berry  <karl@freefriends.org>

	* configure.ac: pthread doc update; also needed in bibtexu (q.v.).

2021-06-19  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* configure.ac: variadic checks before AC_PROG_CXX, to avoid error
	of C++ compiler detection in some environments.
	Report from Vadim Kantorov,
	https://github.com/t-tk/upmendex-package/issues/1
	
	* main.c: Add ICU version to banner.

2021-06-13  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	Same fixes as for mendex.
	* fwrite.c:
	Avoid segmentation fault for unwritable fopen.
	* pageread.c, styfile.c: Exit code 255 for non-existent
	style/log file.

2021-06-06  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* version 0.57  Beta version.
	* configure.ac: Bump version.