@@ -1,3 +1,13 @@
+2021-08-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* styfile.c:
+	Strict check for "icu_attributes" in style file.
+	* sort.c:
+	Strict check for "character_order" in style file.
+	* tests/upmendex.test, tests/attr1.{ist,ind},
+	tests/locale1.ind, tests/rule.{idx,ind}:
+	Add a new test and update conventional tests.
+
 2021-08-28  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* styfile.c:
